[package]
name = "tweak-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
silentpayments = "0.4.0"
secp256k1 = {version = "0.28.1", features = ["rand-std"] }
hex = "0.4"
axum = "0.8.1"
sha2 = "0.10.8"
rusqlite = "0.33.0"
clap = { version = "4.5.28", features = ["derive"] }
bitcoin = { version = "0.32.5", features = ["serde"] }

[dev-dependencies]

